2007-10-26  Martin Leidig  <mleidig@schlund.de>

	Added table showing all configured IWrappers and their parameters for the
	current page in the editor-mode-XML-only DOM-tree view.

	* src/de/schlund/pfixcore/util/TransformerCallback.java: added new method
	which returns a nodelist containing all configured IWrappers and their
	prefixes
	* projects/core/xsl/xmlfontify.xsl: added XSLT which retrieves the IWrapper
	list for the current page, iterates over the IWrappers, gets the IWrapper
	information and shows the data in a table

2007-10-26  Martin Leidig  <mleidig@schlund.de>
	
	Added support for forcing form submit tokens. It's enabled by setting
	the 'requirestoken'-attribute at the according pagerequest/input element	
	to 'true'. 
			
	* src/de/schlund/pfixcore/workflow/app/DefaultIWrapperState.java
	* src/de/schlund/pfixxml/config/PageRequestConfig.java
	* src/de/schlund/pfixxml/config/impl/PageRequestConfigImpl.java
	* src/de/schlund/pfixxml/config/impl/PagerequestInputRule.java
	* projects/core/schema/properties200401.xsd
	* projects/core/dyntxt/statusmessages.xml

2007-10-26  Martin Leidig  <mleidig@schlund.de>

	* build-maven.xml: Add skel archive as artifact attachment.	
	* pom.xml: Set version to 0.11.2

2007-10-25  Martin Leidig  <mleidig@schlund.de>

	* build.xml: Don't include saxon8.x jars into skeleton archive.

2007-10-25  Martin Leidig  <mleidig@schlund.de>

	Improved error page of UniversalExceptionProcessor. Now all exception causes are
	shown (needed cause the toplevel exceptions aren't meaningful enough). All stacktraces
	are available too (and additionally are collapsible).

	* projects/core/xsl/errorrepresentation.xsl: show exception causes too, made 
	stacktrace view collapsible via Javascript, force wrapping of long strings in XSLT
	* src/de/schlund/pfixxml/exceptionprocessor/util/XMLCreatorVisitor.java: recursively
	append exception causes (with stacktraces) to DOM tree

2007-10-23  Martin Leidig  <mleidig@schlund.de>
